Initial setup of African American History app design structure

--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.jsx"></script>
-    <title>Vite + React</title>
+    <title>African American History App</title>
   </head>
   <body>
+    <header>
+      <h1>African American History</h1>
+      <div class="main-nav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">People</a></li>
+          <li><a href="#">Events</a></li>
+        </ul>
+      </div>
+    </header>
     <div id="root"></div>
   </body>
 </html>
