African American Figures App: Updated navbar added colors, hover color, and applied justify-content: space around

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>African American History</h1>
+      <h1>African American Figures</h1>
       <div class="main-nav">
         <ul>
           <li><a href="#">Home</a></li>
