--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
       <h1>African American Figures</h1>
       <div class="main-nav">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">People</a></li>
-          <li><a href="#">Events</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">People</a></li>
+          <li><a href="#events">Events</a></li>
         </ul>
+      </div>
+      <div>
+        <img src="" alt="Figure Name" class="figure-image" />
+        <h2>Figure Name</h2>
+        <p>Born: Date of Birth</p>
+        <p>Contribution: Major Contribution</p>
+        <p>Category: Category Name</p>
       </div>
     </header>
     <div id="root"></div>
